@startuml

title __BINDER's Class Diagram__\n

  namespace com.itbird {
    namespace binder {
      class com.itbird.binder.BinderClientTestActivity {
          ~ serviceConnection : ServiceConnection
          {static} - TAG : String
          # onCreate()
          # onDestroy()
          # onNewIntent()
      }
    }
  }
  

  namespace com.itbird {
    namespace binder {
      class com.itbird.binder.MyMusicPlayService {
          ~ TAG : String
          + onBind()
      }
    }
  }
  

  com.itbird.binder.BinderClientTestActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.binder.MyMusicPlayService -up-|> android.app.Service
  com.itbird.binder.MyMusicPlayService o-- com.itbird.music.IMusicFuction.Stub : fuction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
